syntax = "proto3";

package book;
option go_package = "proto/bookpb";

service BookService {
  rpc CreateBook(CreateBookRequest) returns (BookResponse);
  rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse);
  rpc ReturnBook(BorrowBookRequest) returns (BorrowBookResponse);
  rpc GetBookByID(GetBookByIDRequest) returns (BookResponse);
};

message CreateBookRequest {
  string title = 1;
  string isbn = 2;
  int32 stock = 3;
  string description = 4;
  string author_id = 5;
  string category_id = 6;
  string created_by = 7;
};

message CategoryResponse {
  string category_id = 1;
  string category_name = 2;
  string category_description = 3;
};

message AuthorResponse {
  string author_id = 1;
  string author_name = 2;
  string biography = 3;
};

message BookResponse {
  string book_id = 1;
  string title = 2;
  string isbn = 3;
  int32 stock = 4;
  string description = 5;
  AuthorResponse author = 6;
  CategoryResponse category = 7;
};

message BorrowBookRequest {
  string user_id = 1;
  string book_id = 2;
}

message BorrowBookResponse {
  bool success = 1;
  string err = 2;
}

message GetBookByIDRequest {
  string book_id = 1;
}